--- a/progress-steps/style.css
+++ b/progress-steps/style.css
@@ -55,13 +55,8 @@ body {
   left: 0;
   transform: translateY(-50%);
   z-index: -1;
-  transition: 0.4 ease;
+  transition: 0.4s ease;
 }
-
-
-
-
-
 
 .circle {
   background-color: #fff;
@@ -73,7 +68,7 @@ body {
   justify-content: center;
   border-radius: 50%;
   border: 3px solid #e0e0e0;
-  transition: 0.4 ease;
+  transition: border 0.4s ease;
 }
 
 .circle.active {
